# ai-engineering

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.codex/skills/mermaid-styling/: SKILL.md
.codex/skills/mermaid-styling/agents/: openai.yaml
system-design/: README.md
system-design/01-api-gateway/: 0_readme.md  1_architecture.md  2_architecture_scaled.md  3_terminology.md  4_detailed_concepts.md  5_worked_example.ipynb  Dockerfile  README.md  architecture.md  docker-compose.yml  nginx.conf
system-design/01-api-gateway/app/: embeddings_service.py  gateway.py  inference_service.py
system-design/02-rate-limiting/: 0_readme.md  1_architecture.md  2_architecture_scaled.md  3_terminology.md  4_detailed_concepts.md  5_worked_example.ipynb  README.md  docker-compose.yml  nginx.conf  requirements.txt
system-design/02-rate-limiting/app/: gateway.py  inference_service.py  token_bucket.lua
system-design/03-caching/: 0_readme.md  1_architecture.md  2_architecture_scaled.md  3_terminology.md  4_detailed_concepts.md  5_worked_example.ipynb  README.md  docker-compose.yml  requirements.txt
system-design/03-caching/app/: embedding_service.py  gateway.py
system-design/04-message-queues/: 0_readme.md  1_architecture.md  2_architecture_scaled.md  3_terminology.md  4_detailed_concepts.md  README.md  docker-compose.yml  requirements.txt
system-design/04-message-queues/app/: api.py  worker.py
system-design/05-circuit-breakers/: README.md
system-design/06-load-balancing/: README.md
system-design/07-auto-scaling/: README.md
(+2 files in other folders)
