[project]
name = "ai-engineering"
version = "0.1.0"
description = "Runnable examples and notes for learning AI engineering concepts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "redis==5.2.1",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.0",
]

[tool.uv]
package = false
